
Changes with nginx 1.11.11                                       21 Mar 2017

    *) Feature: the "worker_shutdown_timeout" directive.

    *) Feature: vim syntax highlighting scripts improvements.
       Thanks to Wei-Ko Kao.

    *) Bugfix: a segmentation fault might occur in a worker process if the
       $limit_rate variable was set to an empty string.

    *) Bugfix: the "proxy_cache_background_update",
       "fastcgi_cache_background_update", "scgi_cache_background_update",
       and "uwsgi_cache_background_update" directives might work incorrectly
       if the "if" directive was used.

    *) Bugfix: a segmentation fault might occur in a worker process if
       number of large_client_header_buffers in a virtual server was
       different from the one in the default server.

    *) Bugfix: in the mail proxy server.


Changes with nginx 1.11.10                                       14 Feb 2017

    *) Change: cache header format has been changed, previously cached
       responses will be invalidated.

    *) Feature: support of "stale-while-revalidate" and "stale-if-error"
       extensions in the "Cache-Control" backend response header line.

    *) Feature: the "proxy_cache_background_update",
       "fastcgi_cache_background_update", "scgi_cache_background_update",
       and "uwsgi_cache_background_update" directives.

    *) Feature: nginx is now able to cache responses with the "Vary" header
       line up to 128 characters long (instead of 42 characters in previous
       versions).

    *) Feature: the "build" parameter of the "server_tokens" directive.
       Thanks to Tom Thorogood.

    *) Bugfix: "[crit] SSL_write() failed" messages might appear in logs
       when handling requests with the "Expect: 100-continue" request header
       line.

    *) Bugfix: the ngx_http_slice_module did not work in named locations.

    *) Bugfix: a segmentation fault might occur in a worker process when