@@ -1,4 +1,10 @@
 
+Изменения в nginx 1.11.12                                         24.03.2017
+
+    *) Исправление: nginx мог нагружать процессор; ошибка появилась в
+       1.11.11.
+
+
 Изменения в nginx 1.11.11                                         21.03.2017
 
     *) Добавление: директива worker_shutdown_timeout.
