@@ -9,8 +9,8 @@
 #define _NGINX_H_INCLUDED_
 
 
-#define nginx_version      1011011
-#define NGINX_VERSION      "1.11.11"
+#define nginx_version      1011012
+#define NGINX_VERSION      "1.11.12"
 #define NGINX_VER          "nginx/" NGINX_VERSION
 
 #ifdef NGX_BUILD
