@@ -2904,6 +2904,7 @@ ngx_http_set_keepalive(ngx_http_request_t *r)
             }
 
             cl->buf = b;
+            cl->next = NULL;
 
             hc->busy = cl;
             hc->nbusy = 1;
